v0.3.0/_sources/lcls-plc-qrix-vac_links.rst.txt

Links
-----

.. csv-table::
    :header: Owner A, Item A, Owner B, Item B
    :align: center

        , B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692)^IO Outputs^QRIX_VAC_VGC_03_CLOSED_LIMIT_SWITCH, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 4^Input
        , B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692)^IO Outputs^QRIX_VAC_VGC_03_OPEN_LIMIT_SWITCH, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 3^Input
        , B950_233_WALL_S_DRL_04^EL1004_01_03^Channel 3^Input, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Outputs^QRIX_VAC_VGC_03_OPEN_LIMIT_SWITCH
        , B950_233_WALL_S_DRL_04^EL1004_01_03^Channel 4^Input, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Outputs^QRIX_VAC_VGC_03_CLOSED_LIMIT_SWITCH
        InputDst, GVL_Devices.QRIX_SC_PTM_10.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 1^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_10.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 3^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_10.i_xRemote, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 2^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_20.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 2^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_20.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 1^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_30.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 4^Input
        InputDst, GVL_Devices.QRIX_SC_PTM_30.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_ROUGH_GPI_02.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3174_00_09, AI Standard Channel 1^Value
        InputDst, GVL_Devices.fb_QRIX_ROUGH_GPI_03.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 2^Value
        InputDst, GVL_Devices.fb_QRIX_ROUGH_GPI_04.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 3^Value
        InputDst, GVL_Devices.fb_QRIX_ROUGH_GPI_31.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_23, AI Standard Channel 3^Value
        InputDst, GVL_Devices.fb_QRIX_SC_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_23, AI Standard Channel 2^Value
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_07, Channel 4^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_07, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_02.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 4^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_02.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_03.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 4^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_03.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_04.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 2^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_04.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 1^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_05.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 4^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VGC_05.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_10.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 2^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_10.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 1^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_20.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 4^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_20.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 3^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_30.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 2^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_30.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 1^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_31.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 2^Input
        InputDst, GVL_Devices.fb_QRIX_SC_VRC_31.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 1^Input
        InputDst, GVL_Devices.fb_QRIX_SDS_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 1^Value
        InputDst, GVL_Devices.fb_QRIX_SDS_VRC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL1004_02_01, Channel 2^Input
        InputDst, GVL_Devices.fb_QRIX_SDS_VRC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL1004_02_01, Channel 1^Input
        InputDst, GVL_Devices.qRIXS_DET_GCC_01.i_xHV_ON, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1124_01_22, Channel 1^Input
        InputDst, GVL_Devices.qRIXS_DET_PIP_02.i_iPRESS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3064_00_03, AI Standard Channel 4^Value
        InputDst, GVL_Devices.qRIXS_DET_PIP_02.i_xSP_DI, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_05, Channel 4^Input
        InputDst, GVL_Devices.qRIXS_PRO_01.i_xAlarmOK, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL1088_03_01, Channel 4^Input
        InputDst, GVL_Devices.qRIXS_PRO_01.i_xBPStatus, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL1088_03_01, Channel 2^Input
        InputDst, GVL_Devices.qRIXS_PRO_01.i_xMPStatus, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL1088_03_01, Channel 1^Input
        InputDst, GVL_Devices.qRIXS_PRO_01.i_xWarning, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL1088_03_01, Channel 3^Input
        InputDst, GVL_Devices.qRIXS_ROUGH_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL3174-0002_03_07, AI Standard Channel 4^Value
        InputDst, GVL_Devices.qRIXS_ROUGH_GPI_03.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 2^Value
        InputDst, GVL_Devices.qRIXS_SC_VRC_31.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 2^Input
        InputDst, GVL_Devices.qRIXS_SC_VRC_31.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 1^Input
        InputDst, GVL_Devices.qRIXS_SDS_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 1^Value
        InputDst, GVL_Interface.QRIX_MOT_SDS_MMS_H_BACKWARD_EN, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Inputs^QRIX_MOT_SDS_MMS_H_BACKWARD_EN
        InputDst, GVL_Interface.QRIX_MOT_SDS_MMS_H_FORWARD_EN, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Inputs^QRIX_MOT_SDS_MMS_H_FORWARD_EN
        InputDst, GVL_SA.qRIXS_DET_VRC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E2_EL1004, Channel 2^Input
        InputDst, GVL_SA.qRIXS_DET_VRC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E2_EL1004, Channel 1^Input
        InputDst, GVL_SA.qRIXS_SA_GCC_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E6_EL3174-0002, AI Standard Channel 2^Value
        InputDst, GVL_SA.qRIXS_SA_GCC_01.i_xDisc_Active, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 4^Input
        InputDst, GVL_SA.qRIXS_SA_GCC_01.i_xHV_ON, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 3^Input
        InputDst, GVL_SA.qRIXS_SA_GCC_02.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E6_EL3174-0002, AI Standard Channel 2^Value
        InputDst, GVL_SA.qRIXS_SA_GCC_02.i_xDisc_Active, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 4^Input
        InputDst, GVL_SA.qRIXS_SA_GCC_02.i_xHV_ON, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 3^Input
        OutputSrc, GVL_Devices.QRIX_ROUGH_VRO_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL2212_03_04, DOX Control Channel 1^Control^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_10.q_PumpingStation, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 3^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_10.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 1^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_10.q_xRemote, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 2^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_20.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 1^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_20.q_xReset, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 2^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_30.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 3^Output
        OutputSrc, GVL_Devices.QRIX_SC_PTM_30.q_xReset, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 4^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VGC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_08, Channel 1^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VGC_02.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_08, Channel 2^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VGC_03.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 4^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VGC_04.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 1^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VGC_05.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 2^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VRC_10.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 1^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VRC_20.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 2^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VRC_30.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 4^Output
        OutputSrc, GVL_Devices.fb_QRIX_SC_VRC_31.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_10, Channel 1^Output
        OutputSrc, GVL_Devices.fb_QRIX_SDS_VRC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL2004_02_02, Channel 1^Output
        OutputSrc, GVL_Devices.qRIXS_DET_PIP_02.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2794_00_04, Channel 4^Output
        OutputSrc, GVL_Devices.qRIXS_PRO_01.q_xBPStart, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL2794_03_03, Channel 2^Output
        OutputSrc, GVL_Devices.qRIXS_PRO_01.q_xMPStart, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^B950-310-WALL-W-DRL-02^EL2794_03_03, Channel 1^Output
        OutputSrc, GVL_Devices.qRIXS_SC_VGC_05.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 2^Output
        OutputSrc, GVL_Devices.qRIXS_SC_VRC_31.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_10, Channel 1^Output
        OutputSrc, GVL_SA.qRIXS_DET_VRC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E3_EL2004, Channel 3^Output
        OutputSrc, GVL_SA.qRIXS_SA_GCC_01.q_xHV_DIS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E4_EL2624, Channel 2^Output
        OutputSrc, GVL_SA.qRIXS_SA_GCC_02.q_xHV_DIS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E4_EL2624, Channel 2^Output
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Devices.qRIXS_ROUGH_GPI_04.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 3^Value
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Devices.qRIXS_SC_VGC_04.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 2^Input
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Devices.qRIXS_SC_VGC_04.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 1^Input
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Devices.qRIXS_SC_VGC_05.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 4^Input
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Devices.qRIXS_SC_VGC_05.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_05, Channel 3^Input
        PLC_QRIX_VAC Instance, CommTask Inputs^GVL_Interface.QRIX_MOT_SDS_MMS_H_RAW_ENC_CNTS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Inputs^QRIX_MOT_SDS_MMS_H_RAW_ENC_CNTS
        PLC_QRIX_VAC Instance, CommTask Outputs^GVL_Devices.qRIXS_SC_VGC_04.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 1^Output
        PLC_QRIX_VAC Instance, CommTask Outputs^GVL_Devices.qRIXS_SC_VGC_05.q_xCLS_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 2^Output
        PLC_QRIX_VAC Instance, CommTask Outputs^GVL_Interface.QRIX_VAC_VGC_03_CL_CMD, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Outputs^QRIX_VAC_VGC_03_CL_CMD
        PLC_QRIX_VAC Instance, CommTask Outputs^GVL_Interface.QRIX_VAC_VGC_03_OP_CMD, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Outputs^QRIX_VAC_VGC_03_OP_CMD
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_DET_PIP_01.i_iPRESS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3064_00_03, AI Standard Channel 4^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_DET_PIP_01.i_xSP_DI, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_05, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_OPT_PIP_01.i_iPRESS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3064_00_03, AI Standard Channel 3^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_OPT_PIP_01.i_xSP_DI, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_05, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_GPI_02.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3174_00_09, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_GPI_31.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_23, AI Standard Channel 3^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_VRC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_12, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_VRC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_12, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_VRC_02.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_12, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_ROUGH_VRC_02.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_12, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SA_GCP_02.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_GCC_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_23, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_GCC_01.i_xDisc_Active, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1124_01_22, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_GCC_01.i_xHV_ON, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1124_01_22, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_23, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PIP_01.i_iPRESS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3064_00_03, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PIP_01.i_xSP_DI, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_05, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PIP_02.i_iPRESS, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL3064_00_03, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PIP_02.i_xSP_DI, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL1004_00_05, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_10.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_10.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_10.i_xRemote, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_13, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_20.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_20.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_30.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_PTM_30.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_16, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_07, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_07, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_02.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_02.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_09, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_03.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VGC_03.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_10.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_10.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_20.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_20.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_01, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_30.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SC_VRC_30.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL1004_01_03, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SDS_GCP_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL3174-0002_02_13, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SDS_PTM_10.i_xAtSpd, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL1004_02_08, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SDS_PTM_10.i_xFaultNC, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL1004_02_08, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SSL_GCP_20.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_24, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Devices.qRIXS_SSL_GCP_30.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL3174-0002_01_24, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Interface.QRIX_MOT_SDS_MMS_H_BACKWARD_EN, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Inputs^QRIX_MOT_SDS_MMS_H_BACKWARD_EN
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_Interface.QRIX_MOT_SDS_MMS_H_FORWARD_EN, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1122_00_16^QRIX_MOT_INT (EL6692), IO Inputs^QRIX_MOT_SDS_MMS_H_FORWARD_EN
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_GCC_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E6_EL3174-0002, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_GCC_01.i_xDisc_Active, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_GCC_01.i_xHV_ON, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E5_EL3174-0002, AI Standard Channel 2^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_VGC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E2_EL1004, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_DET_VGC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E2_EL1004, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_GCC_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E6_EL3174-0002, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_GCC_01.i_xDisc_Active, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_GCC_01.i_xHV_ON, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E8_EL1124, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_GPI_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E5_EL3174-0002, AI Standard Channel 1^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_VGC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E1_EL1004, Channel 2^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_OPT_VGC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E1_EL1004, Channel 1^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_SA_GCP_01.i_iPRESS_R, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E5_EL3174-0002, AI Standard Channel 3^Value
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_SA_VWC_01.i_xClsLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E1_EL1004, Channel 4^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^GVL_SA.qRIXS_SA_VWC_01.i_xOpnLS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E1_EL1004, Channel 3^Input
        PLC_QRIX_VAC Instance, PlcTask Inputs^PRG_2_PMPS.fbArbiterIO.i_stCurrentBP, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_PRE, IO Inputs^CurrentBP
        PLC_QRIX_VAC Instance, PlcTask Inputs^PRG_2_PMPS.fbArbiterIO.xTxPDO_state, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_PRE, SYNC Inputs^TxPDO state
        PLC_QRIX_VAC Instance, PlcTask Inputs^PRG_2_PMPS.fbArbiterIO.xTxPDO_toggle, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_PRE, SYNC Inputs^TxPDO toggle
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_DET_PIP_01.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2794_00_04, Channel 4^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_OPT_PIP_01.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2794_00_04, Channel 3^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_ROUGH_VRC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2004_00_13, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_ROUGH_VRC_02.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2004_00_13, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_GCC_01.q_xHV_DIS, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2624_01_18, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PIP_01.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2794_00_04, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PIP_02.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EL2794_00_04, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_10.q_PumpingStation, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 3^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_10.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_10.q_xRemote, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_12, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_20.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_20.q_xReset, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_30.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 3^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_PTM_30.q_xReset, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2794_01_15, Channel 4^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VGC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_08, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VGC_02.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_08, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VGC_03.q_xCLS_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_10, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VGC_03.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 4^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VRC_10.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VRC_20.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_02, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SC_VRC_30.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_04^EL2004_01_04, Channel 4^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SDS_PTM_10.q_RunDO, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL2794_02_09, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_Devices.qRIXS_SDS_PTM_10.q_xReset, TIID^Device 1 (EtherCAT)^B950_233_WALL_S_DRL_05^EL2794_02_09, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_FFO, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_PRE, IO Outputs^FFO
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_FFO, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_SA.qRIXS_DET_GCC_01.q_xHV_DIS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E4_EL2624, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_SA.qRIXS_DET_VGC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E3_EL2004, Channel 3^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_SA.qRIXS_OPT_GCC_01.q_xHV_DIS, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E4_EL2624, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_SA.qRIXS_OPT_VGC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E3_EL2004, Channel 1^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^GVL_SA.qRIXS_SA_VWC_01.q_xOPN_DO, TIID^Device 1 (EtherCAT)^qRIXS_PNL1_E0_EK1100^qRIXS_PNL1_E3_EL2004, Channel 2^Output
        PLC_QRIX_VAC Instance, PlcTask Outputs^PRG_2_PMPS.fbArbiterIO.q_stRequestedBP, TIID^Device 1 (EtherCAT)^B950_233_R03_DRL_01^EK1521-0010_00_15^Term 78 (EK1501-0010)^PMPS_PRE, IO Outputs^RequestedBP
